--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sinon": "^7.2.2"
   },
   "scripts": {
-    "start": "./node_modules/.bin/babel-node server/index.js",
+    "build": "babel src -d dist",
+    "start": "yarn run build && node inspect dist/server/index.js",
     "test": "./node_modules/.bin/mocha --reporter spec"
   }
 }
