--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "build": "babel src -d dist",
-    "start": "yarn run build && node inspect dist/server/index.js",
+    "start": "yarn run build && node inspect ./dist/server/index.js",
     "test": "./node_modules/.bin/mocha --reporter spec"
   }
 }
