--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
+    "d3": "^4.0.0",
     "express": "^4.16.4",
     "expressjs": "^1.0.1",
     "headless-chrome": "^0.0.0",
+    "jsdom": "^13.1.0",
     "mocha": "^5.2.0",
     "mustache": "^3.0.1",
     "mustache-express": "^1.2.8",
@@ -22,11 +24,11 @@
     "sinon": "^7.2.2"
   },
   "scripts": {
-    "build": "babel src -d dist \"$@\"",
-    "watch": "yarn run build --watch ",
-    "start": "yarn run build && node ./dist/server/index.js",
-    "debug": "yarn run build && node inspect ./dist/server/index.js",
-    "clean": "rm -rf ./tmp/*.pdf",
+    "build": "babel src -d dist \"$@\" --copy-files",
+    "watch": "npm run build --watch ",
+    "start": "npm run build && node ./dist/server/index.js",
+    "debug": "npm run build && node inspect ./dist/server/index.js",
+    "clean-tmp": "rm -rf ./tmp/*.pdf",
     "test": "./node_modules/.bin/mocha --reporter spec",
     "stop": "pkill node"
   }
