--- a/package.json
+++ b/package.json
@@ -26,13 +26,11 @@
     "sinon": "^7.2.2"
   },
   "scripts": {
-    "build": "rm -rf dist && npm run build-css && babel src -d dist \"$@\" --copy-files",
-    "build-css": "sass src/generator/templates/index.scss:dist/generator/templates/index.css",
+    "build": "rm -rf dist && mkdir dist && npm run build-css && babel src -d dist \"$@\" --copy-files",
+    "build-css": "sass src/generator/styles/index.scss:dist/generator/templates/index.css",
     "watch": "npm run build --watch ",
     "start": "npm run build && node ./dist/server/index.js",
     "debug": "npm run build && node inspect ./dist/server/index.js",
-    "clean-tmp": "rm -rf ./tmp/*.pdf",
-    "test": "./node_modules/.bin/mocha --reporter spec",
     "stop": "pkill node"
   }
 }
